--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,7 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello bad World!"
+      - name: Print date
+        run: date
+      - name: Directory contents
+        run: ls -ls
