--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,4 +35,5 @@ jobs:
           heroku_email: 'jari.artes@gmail.com'
           procfile: 'web: npm run start-prod'
           healthcheck: 'https://fullstackopen-pokedex.herokuapp.com/health'
-          checkstring: 'ok'
+          checkstring: 'Rok'
+          rollbackonhealthcheckfailed: true
