--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches: [master]
+    types: [opened, synchronize]
 
 jobs:
   simple_deployment_pipeline:
@@ -35,5 +38,5 @@ jobs:
           heroku_email: 'jari.artes@gmail.com'
           procfile: 'web: npm run start-prod'
           healthcheck: 'https://fullstackopen-pokedex.herokuapp.com/health'
-          checkstring: 'Rok'
+          checkstring: 'ok'
           rollbackonhealthcheckfailed: true
