--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,7 +19,7 @@ jobs:
       - name: npm install
         run: npm install
       - name: lint
-        run: npm run eslint
+        run: npm run eslintx
       - name: build
         run: npm run build
       - name: test
@@ -68,7 +68,7 @@ jobs:
               icon_emoji: ':octocat:',
               attachments: [{
                 color: 'good',
-                text: `a new version deployed to <a href="https://fullstackopen-pokedex.herokuapp.com/" /> (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR} build took ${process.env.AS_TOOK}`,
+                text: `a new version deployed to https://fullstackopen-pokedex.herokuapp.com/ (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR} build took ${process.env.AS_TOOK}`,
               }]
             }
         env:
