--- a/.github/workflows/url-check.yml
+++ b/.github/workflows/url-check.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Check the deployed service URL
         uses: jtalk/url-health-check-action@v1.2
         with:
-          url: https://fullstackopen-pokedex.herokuapps.com/health
+          url: https://fullstackopen-pokedex.herokuapp.com/health
       - name: Failure notification to slack
         if: failure()
         uses: 8398a7/action-slack@v3
